src/tests/snapshots/cendol__tests__pp_stringification__stringification_whitespace_handling.snap
---
source: src/tests/pp_stringification.rs
expression: tokens
---
- kind: Identifier
  text: const
- kind: Identifier
  text: char
- kind: Star
  text: "*"
- kind: Identifier
  text: s1
- kind: Assign
  text: "="
- kind: StringLiteral
  text: "\"a+b\""
- kind: Semicolon
  text: ;
- kind: Identifier
  text: const
- kind: Identifier
  text: char
- kind: Star
  text: "*"
- kind: Identifier
  text: s2
- kind: Assign
  text: "="
- kind: StringLiteral
  text: "\"a + b\""
- kind: Semicolon
  text: ;
- kind: Identifier
  text: const
- kind: Identifier
  text: char
- kind: Star
  text: "*"
- kind: Identifier
  text: s3
- kind: Assign
  text: "="
- kind: StringLiteral
  text: "\"f(a, b)\""
- kind: Semicolon
  text: ;
