src/tests/snapshots/cendol__tests__pp_stringification__va_args_stringification.snap
---
source: src/tests/pp_stringification.rs
expression: tokens
---
- kind: Identifier
  text: const
- kind: Identifier
  text: char
- kind: Star
  text: "*"
- kind: Identifier
  text: s
- kind: Assign
  text: "="
- kind: StringLiteral
  text: "\"a, b, c\""
- kind: Semicolon
  text: ;
